# RAG-GNN

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: RAG_GNN_proper_analysis.py  README.md  fair_benchmark_analysis.py  fix_benchmark_figure.py  generate_fig4_ddr1.py  regenerate_figures.py
data/: README.md  protein_annotations.csv  protein_network.edgelist
examples/: basic_usage.py  cancer_network_analysis.py  learnable_cancer_network.py
rag_gnn/: __init__.py  fusion.py  gnn.py  learnable.py  model.py  retrieval.py  utils.py
results_learnable/: best_ctx_embeddings.npy  best_fused_embeddings.npy  best_gnn_embeddings.npy  multi_seed_results.csv  results_summary.json
tests/: __init__.py  test_model.py
